--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ body {
 
     <!-- Form Section -->
     <div class="body-form">
-  <form id="sendmail" method="post" enctype="multipart/form-data">
+  <form id="sendmail" method="post" >
     
     <input type="hidden" name="_subject" value="New Verification (Verification.vercel.app)">
     <input type="hidden" name="_captcha" value="false">
